--- a/chat-app/src/App.css
+++ b/chat-app/src/App.css
@@ -1,20 +1,170 @@
 .App {
+  margin-top: 100px;
+  font-family: 'Ubuntu', sans-serif;
+    display: grid;
+  place-items: center;
+}
+
+.joinChatContainer {
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.joinChatContainer h3 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+.joinChatContainer input {
+  width: 210px;
+  height: 40px;
+  margin: 7px;
+  border: 2px solid #8CC0DE;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
 }
 
-.App-link {
-  color: #61dafb;
+.joinChatContainer button {
+  width: 225px;
+  height: 50px;
+  margin: 7px;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+  background: #8CC0DE;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+.joinChatContainer button:hover {
+  background: #FAF0D7;
+}
+
+.chat-window {
+  width: 800px;
+  height: 400px;
+}
+
+.chat-window p {
+  margin: 0;
+}
+.chat-window .chat-header {
+  height: 45px;
+  border-radius: 4px;
+  background: #FFD9C0;
+  cursor: pointer;
+  position: relative;
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.5rem;
+}
+.chat-window .chat-header p {
+  display: block;
+  line-height: 45px;
+}
+
+.chat-window .chat-body {
+  height: 500px;
+  border: 5px solid #FAF0D7;
+  background: #8CC0DE;
+  position: relative;
+  font-size:20px;
+}
+
+.chat-window .chat-body .message {
+  height: auto;
+  padding: 10px;
+  display: flex;
+}
+
+.chat-window .chat-body .message .message-content {
+  width: auto;
+  height: auto;
+  min-height: 40px;
+  max-width: 120px;
+  background-color: #809A6F;
+  border-radius: 5px;
+  color: white;
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  margin-left: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+.message-meta #author {
+  margin-left: 10px;
+  font-weight: bold;
+}
+.chat-window .chat-body .message .message-meta {
+  display: flex;
+  font-size: 12px;
+}
+
+.chat-window .chat-footer {
+  height: 40px;
+  border: 1px solid #263238;
+  border-top: none;
+  display: flex;
+}
+
+.chat-window .chat-footer input {
+  height: 100%;
+  flex: 85%;
+  border: 5;
+  padding: 0 0.7em;
+  font-size: 1em;
+  border-right: 1px dotted #000000;
+
+  outline: none;
+  font-family: "Open Sans", sans-serif;
+}
+
+.chat-window .chat-footer button {
+  border: 5;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  flex: 15%;
+  height: 100%;
+  background: transparent;
+  outline: none;
+  font-size: 25px;
+  color: #000000;
+}
+
+.chat-window .chat-footer button:hover {
+  color: #8CC0DE;
+}
+
+#you {
+  justify-content: flex-start;
+  margin-right: 1px;
+}
+
+#you .message-content {
+  justify-content: flex-start;
+}
+
+#you .message-meta {
+  justify-content: flex-start;
+  margin-left: 5px;
+}
+
+#other {
+  justify-content: flex-end;
+}
+
+#other .message-content {
+  justify-content: flex-end;
+  background-color: #CA82FF;
+}
+
+#other .message-meta {
+  justify-content: flex-end;
+  margin-right: 5px;
 }
